--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,7 @@
 	<uses-permission android:name="android.permission.INTERNET"/>    
 
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
+    <application android:icon="@drawable/icon_kawaii" android:label="@string/app_name" android:debuggable="true">
         <activity android:name=".LitActivity"
                   android:label="@string/app_name">
             <intent-filter>
