--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="net.animuchan.lit"
-      android:versionName="1.01" android:versionCode="2">
+          package="net.animuchan.lit"
+          android:versionName="1.01" android:versionCode="2">
     <uses-sdk android:minSdkVersion="8"/>
-	<uses-permission android:name="android.permission.INTERNET"/>    
+    <uses-permission android:name="android.permission.INTERNET"/>
 
 
-    <application android:icon="@drawable/icon_launcher" android:label="@string/app_name">
+    <application android:icon="@drawable/icon_launcher" android:label="@string/app_name" android:debuggable="true">
         <activity android:name=".LitActivity"
                   android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
